[package]
name = "procfind"
version = "0.1.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
lalrpop = "0.16"

[dependencies]
lalrpop-util = "0.16"
regex = "1"
#procfs = {git="https://github.com/eminence/procfs"}
procfs = "*"
lazy_static = "1"
clap = "2"
libc = "*"
chrono = "0.4"
