[package]
name = "procfind"
version = "0.1.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"
regex = "1.5.5"
#procfs = {git="https://github.com/eminence/procfs"}
procfs = "*"
lazy_static = "1"
clap = "2"
libc = "*"
chrono = "0.4"
